feat: calendar auto scroll while draging event at top/bottom edge

--- a/stories/addons/dragAndDrop/props/API.stories.mdx
+++ b/stories/addons/dragAndDrop/props/API.stories.mdx
@@ -100,3 +100,13 @@ The <LinkTo kind="addons-drag-and-drop-props" story="resizable">resizable</LinkT
 Determines if an event is resizable.
 
 **Note:** `resizable` events must also be draggable. You cannot resize an event with a <LinkTo kind="addons-drag-and-drop-props" story="draggable-accessor">draggableAccessor</LinkTo> prop of `false`.
+
+### enableDragAutoScroll
+
+- type: `boolean`
+- default: `false`
+- <LinkTo kind="addons-drag-and-drop-props" story="auto-scroll">
+    Example
+  </LinkTo>
+
+It is used to enable auto scroll when dragging an event.
